 /**
 * Copyright 2006-2018. California Institute of Technology.
 * ALL RIGHTS RESERVED.
 * U.S. Government sponsorship acknowledged.
 *
 * This software is subject to U. S. export control laws and
 * regulations (22 C.F.R. 120-130 and 15 C.F.R. 730-774). To the
 * extent that the software is subject to U.S. export control laws
 * and regulations, the recipient has the responsibility to obtain
 * export licenses or other export authority as may be required
 * before exporting such information to foreign countries or
 * providing access to foreign nationals.
 */
 /**
 * AMPCS common protobuf schema for a metadata map.
 *
 * Version: 1.0
 * ChangeLog:
 * V1.0 - New for R8
 */
syntax = "proto3";

package metadata;

import "primitives/metadata_primitives.proto";

option optimize_for = SPEED;
option java_multiple_files = true;
option java_package = "jpl.gds.serialization.metadata";
option java_outer_classname = "ProtoMetadataSerialization";

message Proto3MetadataMap {
    repeated Proto3MetadataMapElement mapEntry = 1;
}